<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amando4</string>
    <string name="action_settings">Action Settings</string>

    <!-- Startseite -->
    <string name="txt_startseiteanzeigen_intro">Sie haben folgende Optionen zur Verfügung:</string>
    <!-- Activity_geo_kontakte_auflisten -->
    <string name="txt_geokontat_auflisten_keineDaten">Es wurden keine Daten gefunden:</string>

    <!-- Optionsmenue -->
    <string name="men_hilfe_anzeige">Hilfe</string>
    <string name="men_einstellungen_bearbeiten">Einstelungen</string>
    <string name="men_amando_beenden">Beenden</string>

    <!-- Schaltflächentext -->
    <string name="sf_position_senden">Position senden</string>
    <string name="sf_position_senden_beenden">Senden beenden</string>
    <string name="sf_geokontakte_verwalten"> Geokontakte verwalten</string>
    <string name="sf_karte_anzeigen">Karte anzeigen</string>
    <string name="sf_simultation">Simulation starten</string>
    <string name="sf_nickname">Nickname Anzeigen</string>

    <!-- Einstellungen -->
    <string name="txt_einstell_cat_title_allg">Allgemain</string>
    <string name="txt_einstell_nickname">Nickname</string>
    <string name="txt_einstell_cat_title_server">Server</string>
    <string name="txt_einstell_serverort">Ort des Servers</string>
    <string name="txt_einstell_serverort_text">\'Lokal\': lokale Installation\n\'Extern\': Demo-Servre</string>
    <string name="txt_einstell_serverort_default">Extern</string>
    <string name="txt_einstell_cat_title_position">Position</string>
    <string name="txt_einstell_gps_min_zeit">Positionsermittlung (Zeit)</string>
    <string name="txt_einstell_gps_min_dist">Positionsermittlung (Distanz)</string>

    <!-- Geokontakt anzeigen -->
    <string name="txt_geokontakt_name">Name:</string>
    <string name="txt_geokontakt_telefonnummer">Telefonnummer:</string>
    <string name="txt_geokontakt_letzte_position">Letzte Position:</string>
    <string name="txt_geokontakt_stichwort">Stichwort:</string>
    <string name="txt_geokontakt_datum">Datum:</string>

    <!-- Position senden -->
    <string name="txt_position_senden_titel">Position Senden</string>
    <string name="txt_position_senden_intro">Senden Sie ihre Position an einen Geokontakt</string>
    <string name="txt_position_aktualisieren">Eigene Position aktualisieren</string>

    <!-- Title Activity -->
    <string name="startseite_titel">Amado-Startseite</string>
    <string name="title_activity_hilfe_anzeigen">HilfeAnzeigen</string>
    <string name="title_activity_geo_kontakte_auflisten">GeoKontakteAuflisten</string>
    <string name="title_activity_karte_anzeigen">KarteAnzeigen</string>
    <string name="hello_world">Hello world!</string>

</resources>